[tool.poetry]
name = "pugchat"
version = "0.1.0"
description = ""
authors = ["Web Pug <wepbug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.77.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
